# esp32s3_face_recognition

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/LVGL_Face/: CMakeLists.txt
components/esp-dl/: CMakeLists.txt  idf_component.yml
components/esp-dl/include/image/: dl_image.hpp
components/esp-dl/include/math/: dl_math.hpp  dl_math_matrix.hpp
components/esp-dl/include/model_zoo/: face_recognition_112_v1_s16.hpp  face_recognition_tool.hpp  face_recognizer.hpp  human_face_detect_mnp01.hpp  human_face_detect_msr01.hpp
components/esp-dl/include/tool/: dl_tool.hpp
components/esp-dl/include/typedef/: dl_variable.hpp
main/: CMakeLists.txt  MCyaping.h  chat_2025_05_05_10_19_39.md  esp32_s3_szp.c  esp32_s3_szp.h  idf_component.yml  logo_en_240x240_lcd.h  main.cpp  who_ai_utils.cpp  who_ai_utils.hpp  who_human_face_recognition.cpp  who_human_face_recognition.hpp  zibo.h
